[package]
name = "clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
enigo = "0.1.2"
tauri-hotkey = "0.1.2"

[profile.release]
opt-level = "s"
panic = "abort"
codegen-units = 1
